modules/meteroid/tests/integration/snapshots/integration__test_customer__rest_list.snap
---
source: modules/meteroid/tests/integration/test_customer.rs
expression: "&list"
---
{
  "data": [
    {
      "id": "cus_xxx",
      "name": "new name",
      "alias": "fffrrriiieeennndddsss",
      "billing_email": "fake@fake.com",
      "invoicing_emails": [],
      "phone": null,
      "billing_address": null,
      "shipping_address": null,
      "currency": "EUR",
      "invoicing_entity_id": "ive_xxx",
      "vat_number": null,
      "custom_taxes": [],
      "connected_account_id": null
    },
    {
      "id": "cus_xxx",
      "name": "created_manual",
      "alias": "created_manual",
      "billing_email": "created_manual@meteroid.com",
      "invoicing_emails": [],
      "phone": null,
      "billing_address": null,
      "shipping_address": null,
      "currency": "EUR",
      "invoicing_entity_id": "ive_xxx",
      "vat_number": null,
      "custom_taxes": [],
      "connected_account_id": null
    },
    {
      "id": "cus_xxx",
      "name": "Test Customer REST",
      "alias": "test-customer-rest",
      "billing_email": "billing@meteroid.com",
      "invoicing_emails": [
        "invoicing@meteroid.com"
      ],
      "phone": "123456789",
      "billing_address": {
        "line1": "123 Test St",
        "city": "Test City",
        "country": "FR",
        "zip_code": "12345"
      },
      "shipping_address": {
        "same_as_billing": true
      },
      "currency": "EUR",
      "invoicing_entity_id": "ive_xxx",
      "vat_number": "VAT123456",
      "custom_taxes": [
        {
          "tax_code": "TAX001",
          "name": "Standard Tax",
          "rate": 20.0
        }
      ],
      "connected_account_id": null
    }
  ],
  "pagination_meta": {
    "page": 0,
    "per_page": 10,
    "total_items": 3,
    "total_pages": 1
  }
}
